--- a/tex_files/poissondistribution.tex
+++ b/tex_files/poissondistribution.tex
@@ -22,7 +22,7 @@ constant~$\lambda$ such that
   \label{eq:6}
  \E{N(s,t]} = \lambda (t-s).
 \end{equation}
-The constant $\lambda$ is often called the \recall{arrival rate}.
+The constant $\lambda$ is most times called the \recall{arrival rate}.
 
 
 The second assumption is that the process $\{N(s,t], s\leq t\}$ has
